--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 
 
-<title style="font-family: Lora;">Dashboard Informasi Profil Kemiskinan di Indonesia</title>
+<title>Dashboard Informasi Profil Kemiskinan di Indonesia</title>
 
 <meta property="og:title" content="Dashboard Informasi Profil Kemiskinan di Indonesia" />
 
