ganti font di judul

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 
 
-<title>Dashboard Informasi Profil Kemiskinan di Indonesia</title>
+<title style = "font-family: Poppins;">Dashboard Informasi Profil Kemiskinan di Indonesia</title>
 
 <meta property="og:title" content="Dashboard Informasi Profil Kemiskinan di Indonesia" />
 
