--- a/index.html
+++ b/index.html
@@ -113,7 +113,8 @@ window.FlexDashboardComponents = [];
 <script src="PROJECT-DASHBOARD-INFORMASI_files/typedarray-0.1/typedarray.min.js"></script>
 <link href="PROJECT-DASHBOARD-INFORMASI_files/plotly-htmlwidgets-css-2.5.1/plotly-htmlwidgets.css" rel="stylesheet" />
 <script src="PROJECT-DASHBOARD-INFORMASI_files/plotly-main-2.5.1/plotly-latest.min.js"></script>
-<style type="text/css">
+
+ <style type="text/css">
 
 /*
  Dashboard CSS from Keen IO Dashboards
@@ -806,7 +807,10 @@ table.dataTable thead th {
 .mobile-figure {
   display: none;
 }
-
+  
+.li-active{
+  background-color: rgb(220, 220, 220);
+}
 
 
 @media only screen and (min-width: 768px) {
