--- a/index.html
+++ b/index.html
@@ -2886,7 +2886,7 @@ $('.navbar-inverse').removeClass('navbar-inverse').addClass('navbar-default');
 <li><p style="text-align: justify;">Garis Kemiskinan (GK) <br> Garis Kemiskinan (GK) mencerminkan nilai rupiah pengeluaran minimum yang diperlukan seseorang untuk memenuhi kebutuhan pokok hidupnya selama sebulan, baik kebutuhan makanan maupun non-makanan. GK terdiri dari Garis Kemiskinan Makanan (GKM) dan Garis Kemiskinan Non-Makanan (GKNM). Garis Kemiskinan Makanan (GKM) merupakan nilai pengeluaran minimum untuk kebutuhan makanan yang disetarakan dengan 2100 kilokalori per kapita per hari. Paket komoditi kebutuhan dasar makanan diwakili oleh 52 jenis komoditi (padi-padian, umbi-umbian, ikan, daging, telur dan susu, sayuran, kacang-kacangan, buah-buahan, minyak dan lemak, dll).Garis Kemiskinan Non-Makanan (GKNM) merupakan nilai pengeluaran minimum untuk kebutuhan non-makanan berupa perumahan, sandang, pendidikan dan kesehatan. Paket komoditi kebutuhan dasar non-makanan diwakili oleh 51 jenis komoditi di perkotaan dan 47 jenis komoditi di perdesaan.</p></li>
 <li><p style="text-align: justify;">Persentase Penduduk Miskin <br> Head Count Index (HCI-P0) adalah persentase penduduk yang berada di bawah Garis Kemiskinan (GK).</p></li>
 <li><p style="text-align: justify;">Indeks Kedalaman Kemiskinan <br> Indeks Kedalaman Kemiskinan (Poverty Gap Index-P1) merupakan ukuran rata-rata kesenjangan pengeluaran masing-masing penduduk miskin terhadap garis kemiskinan. Semakin tinggi nilai indeks, semakin jauh rata-rata pengeluaran penduduk dari garis kemiskinan.</p></li>
-<li><p style="text-align: justify;">Indeks Keparahan Kemiskinan <br> Indeks Keparahan Kemiskinan (Proverty Severity Index-P2) memberikan gambaran mengenai penyebaran pengeluaran di antara penduduk miskin. Semakin tinggi nilai indeks, semakin tinggi ketimpangan pengeluaran di antara penduduk miskin.</p></li>
+<li><p style="text-align: justify;">Indeks Keparahan Kemiskinan <br> Indeks Keparahan Kemiskinan (Poverty Severity Index-P2) memberikan gambaran mengenai penyebaran pengeluaran di antara penduduk miskin. Semakin tinggi nilai indeks, semakin tinggi ketimpangan pengeluaran di antara penduduk miskin.</p></li>
 <li><p style="text-align: justify;"><em>Gini Ratio</em> <br> Dalam mengukur tingkat ketimpangan di Indonesia, BPS menggunakan data pengeluaran sebagai proksi pendapatan yang bersumber dari Susenas. Gini ratio adalah salah satu ukuran ketimpangan pengeluaran yang digunakan. Nilai gini ratio berkisar antara 0 (nol) dan 1 (satu). Nilai gini ratio yang semakin mendekati 1 mengindikasikan tingkat ketimpangan yang semakin tinggi.</p></li>
 </ol>
 <p><br></p>
@@ -2902,9 +2902,9 @@ $('.navbar-inverse').removeClass('navbar-inverse').addClass('navbar-default');
 <p style="text-align: justify;">Dashboard Informasi ini dibangun untuk memenuhi Tugas Ujian Akhir Semester (UAS) Mata Kuliah Visualisasi Data dan Informasi pada Semester VI di Politeknik Statistika STIS</p>
 <p><strong>Informasi Penulis:</strong></p>
 <ul>
-<li>Nama : Raflizal Fikrar Odriansyah <br></li>
-<li>NIM : 221910812 <br></li>
-<li>Kelas : 3SD1 <br></li>
+<li>Nama&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;: Raflizal Fikrar Odriansyah <br></li>
+<li>NIM&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;: 221910812 <br></li>
+<li>Kelas&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;: 3SD1 <br></li>
 </ul>
 </div>
 </div>
