--- a/index.html
+++ b/index.html
@@ -120,6 +120,10 @@ window.FlexDashboardComponents = [];
  Dashboard CSS from Keen IO Dashboards
  (https://github.com/keen/dashboards)
 */
+  
+.li-active{
+  background-color: rgb(220,220,220);
+}
 
 body {
   background: #f2f2f2;
@@ -134,10 +138,6 @@ body hr {
 .navbar-inverse .navbar-nav > li > a,
 .navbar .navbar-brand {
   text-decoration: none;
-}
-  
-.li-active{
-  background-color: rgb(220, 220, 220);
 }
 
 .navbar-logo {
